# skype-emoticon-scraper

./: .gitignore  Cargo.toml  NOTES.md  README.md
crates/skype/: Cargo.toml
crates/skype/src/: config.rs  emoticon_data.rs  lib.rs
src/: cli.rs  emoticon.rs  main.rs  spritesheet.rs
